# cmake_journey

./: CMakeLists.txt  README.md  Tutorial_Config.h.in  main.cpp
local_math/: CMakeLists.txt  local_math.h  m_sqrt.cpp  make_table.cpp
